# trusty-pub

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/workflows/: pages.yml  zizmor.yml
data/: missing_values.csv  report.tsv  report_mini.tsv  top-pypi-packages-30-days.csv
data/analysis/: dep_coverage.tsv  weakest_links.tsv
data/results/notp/: 1password  2captcha-python  a9x-webstatistics  aadict  about-time  abstract-ai  abstract-gui  abstract-solcatcher  abstract-utilities  abstract-webtools  abstractcp  accelerator  accelerator-toolbox  access-parser  accumulation-tree  acid-xblock  acme  acryl-datahub-actions  acryl-datahub-airflow-plugin  acryl-datahub-classify  acryl-datahub-gx-plugin  acryl-pyhive  acryl-sqlglot  actions-toolkit  adafruit-blinka  adafruit-platformdetect  adafruit-pureio  adagio  adal  adbc-driver-flightsql  adbc-driver-manager  adbc-driver-snowflake  adbc-driver-sqlite  adblockparser  adbutils  addict  adjusttext  adtk  advertools  adyen  (+7219 more)
data/results/tp/: a2a-sdk  abi3audit  abi3info  ably  abqpy  absl-py  accesscontrol  acquire  acquisition  acres  acryl-great-expectations  actions-python-core  ada-url  adaptive-cards-py  aes-pkcs5  aeventkit  agate  agent-lifecycle-toolkit  ahocorasick-rs  ai-parrot  ailment  aio-pika  aioairctrl  aioboto3  aiobotocore  aiodataloader  aiodns  aiodynamo  aiofiles  aioftp  aiogram  aiohappyeyeballs  aiohasupervisor  aiohomekit  aiohomematic  aiohttp  aiohttp-asyncmdnsresolver  aiohttp-client-cache  aiohttp-cors  aiohttp-fast-zlib  (+2603 more)
data/subsets/: notp.tsv  notp_mini.tsv  top100.tsv  top1000.tsv  top500.tsv  tp.tsv  tp_mini.tsv
data/tracker/: searched.tsv
data/workflows/: failures.csv
scripts/: extract_resources.py
src/trusty_pub/: __init__.py  bulk_search.py  classify.py  classify_nogithub.py  defaults.py  defaults.toml  deps_analysis.py  fetch_workflows.py  repo_urls.py  report.py  source_listings.py  workflow_parser.py
(+7283 files in other folders)
